# dmesh-core

./: .gitignore  GUIDELINES.md  README.md  REFERENCE_INTEGRATION.md  RELEASE_NOTES.md  docker-compose.yml  fix_sdk.py  pyproject.toml  pytest.ini  sdk_sync_test.py
.github/workflows/: codeql.yml  snyk.yml  tests.yml
cli/: conftest.py  main.py  pyproject.toml  test_dp.yaml
cli/dm/: main.py  utils.py  utils_original.py
cli/dm/commands/: __init__.py  deinit.py  get.py  get_dc.py  list.py  put.py  reset.py
cli/dm/deinit/: config_remover.py  container_remover.py  image_remover.py  orchestrator.py
cli/dm/docker/open-data-mesh-ws/: requirements.txt
cli/dm/docker/open-data-mesh-ws/app/: main.py  models.py
cli/dm/docker/open-data-mesh-ws/app/routers/: data_contracts.py
cli/dm/init/: config_writer.py  container_manager.py  health_checker.py
cli/dm/put/: dp_publisher.py
cli/tests/: test_cli_sqlite.py
cli/tests/deinit/: __init__.py
cli/tests/integration/cli/: test_data_contracts.py  test_data_products.py
cli/tests/integration/ws/: __init__.py  test_data_contracts.py
cli/tests/ws/: __init__.py  test_odps_validator.py
examples/: dmesh-cli-smoke-test.ps1  dmesh-cli-smoke-test.sh  dp1-full.yaml  sdk_postgres_async_test.py  sdk_sync_test.py  sdk_usage_example.py
examples/config/: local_docker.toml
examples/custom-validation/schemas/: custom-odps-json-schema-v1.0.0.json
examples/lean-validator/schemas/: custom-odps-json-schema-v1.0.0.json
open-data-mesh-api/: pyproject.toml
open-data-mesh-cli/: README.md  pyproject.toml
open-data-mesh-cli/dm/commands/: delete.py  init.py  put_dc.py
open-data-mesh-cli/dm/deinit/: __init__.py
open-data-mesh-cli/dm/init/: docker_check.py  errors.py  feedback.py  orchestrator.py
open-data-mesh-cli/dm/put/: config_reader.py  errors.py  history.py
open-data-mesh-cli/tests/db/: test_schema.py
open-data-mesh-cli/tests/integration/: __init__.py
open-data-mesh-cli/tests/ws/: test_odps_enricher.py
open-data-mesh-sdk/examples/: basic_usage.py
open-data-mesh-sdk/src/open_data_mesh_sdk/: __init__.py
open-data-mesh-sdk/tests/integration/: test_service_crud.py
open-data-mesh-sdk/tests/unit/: test_service.py
rest/: Dockerfile  README.md  pyproject.toml
rest/src/open_data_mesh_api/: main.py
rest/src/open_data_mesh_api/routers/: dcs.py  dps.py
samples/: dc1-full.yaml  dmesh-cli-smoke-test.sh  dp1-full.yaml  dp1-minimal.yaml
scratch/: debug_setup.py
sdk/: README.md  pyproject.toml
sdk/src/open_data_mesh_sdk/: __init__.py  sdk.py
sdk/src/open_data_mesh_sdk/core/: exceptions.py  repository.py  service.py  validator.py
sdk/src/open_data_mesh_sdk/persistency/: __init__.py  in_memory.py
sdk/src/open_data_mesh_sdk/schemas/: odcs-3.1.0.json  odps-1.0.0.json
sdk/tests/: conftest.py
sdk/tests/integration/: test_sdk.py  test_sqlite_repo.py
tests/: conftest.py
tests/integration/api/: conftest.py  test_api_endpoints.py
tests/integration/sdk/: conftest.py  test_sdk.py  test_sdk_client_lifecycle.py  test_sdk_config_options.py  test_sdk_data_contracts.py  test_sdk_data_products.py  test_sdk_discover.py  test_sdk_id_hooks.py  test_sdk_lean_validator_fill_defaults.py  test_sdk_lean_validator_preprocessor.py  test_sdk_lean_validator_validator.py  test_sdk_performance.py  test_sdk_port_adapters.py
(+48 files in other folders)
