[project]
name = "open-data-mesh-api"
version = "0.1.0"
description = "REST API for Open Data Mesh"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.30.0",
    "open-data-mesh-sdk",
    "mangum>=0.17.0", # For AWS Lambda deployment
]

[tool.setuptools.package-data]
"open_data_mesh_api" = ["**/*.yaml"]

[tool.pytest.ini_options]
addopts = "--tb=short -s"

[tool.uv.sources]
open-data-mesh-sdk = { path = "../sdk" }
