[project]
name = "open-data-mesh-sdk"
version = "0.1.0"
description = "Python SDK for Open Data Mesh"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.0",
]

[tool.setuptools.package-data]
"open_data_mesh_sdk" = ["**/*.sql"]

[tool.pytest.ini_options]
addopts = "--tb=short -s"
python_functions = "test_* *_test"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
